--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -42,16 +42,18 @@
         <!--增加:End當前分類-->
         <div id="categoryList" class="row">
             @{
-            
+
                 @foreach (var item in Model.DistinctBy(item => item.pCategoryId))
                 {
-                    
+
                     <div class="col-md-2 col-4">
                         <div class="shop-cat-boxs">
                             <a class="for-ajax" href="/Index/Shop?categoryName=@item.pCategoryName" data-category-name="@item.pCategoryName">
-                            <img class="img-fluid" src="~/images/category_@{@item.pCategoryName}.jpg" alt="" />
-                            <span>@item.pCategoryName</span>
-                        </a>
+                                <img class="img-fluid" src="~/images/category_@{
+                                        @item.pCategoryName
+    }.jpg" alt="" />
+                                <span>@item.pCategoryName</span>
+                            </a>
                         </div>
                     </div>
                 }
@@ -69,7 +71,7 @@
                     <div class="d-flex text-center align-items-center flex-wrap justify-content-between mb-4">
                         <h3>篩選 <i class="fa-solid fa-grip-lines-vertical"></i></h3>
 
-                        
+
                         <div class="w-25" style="text-align:end">商品排序</div>
                         <div class="shop-filter-select ">
                             <select id="selOrder" class="form-select form-select-md" aria-label="排序方式">
@@ -83,13 +85,13 @@
                             </select>
                         </div>
 
-                        <div >以品牌篩選</div>
+                        <div>以品牌篩選</div>
                         <div class="shop-filter-select">
-                            
+
                             <select id="selBrand" class="form-select form-select-md" aria-label="品牌篩選">
-                                
+
                                 <option value="" selected>無</option>
-                                @foreach(var p in Model.DistinctBy(p=>p.pBrandName).OrderBy(p=>p.pBrandName))
+                                @foreach (var p in Model.DistinctBy(p => p.pBrandName).OrderBy(p => p.pBrandName))
                                 {
                                     <option value="@p.pBrandName">@p.pBrandName</option>
                                 }
