●新增checkout頁面demor按鍵 ●修改綠界金流付款頁面參數 ●修改forgetpassword =>lastordefault

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1327,7 +1327,7 @@
             deliveryInfo.phone = phone;
         })
 
-        //DEMO載具
+        //DEMO發票的按鍵
         $('#invoiceDemo').click(function(){
             $('#eInvoiceNum').val("/9Qj376W");
         })
