--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
@@ -98,7 +98,7 @@
                     <h2>@Model.selectedProduct.pName</h2>
                     @if (Model.selectedProduct.pDiscount != null)
                     {
-                        <h5><del>$ @Model.selectedProduct.p優惠價格</del>$ @Model.selectedProduct.pPrice</h5>
+                        <h5><del>$ @Model.selectedProduct.pPrice</del>$ @Model.selectedProduct.p優惠價格</h5>
                     }
                     else
                     {
