--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1231,7 +1231,7 @@
                         </div>
                         <div class="d-flex">
                             <h4 class="mr-auto">運費</h4>
-                             <span class="mr-2 font-weight-bold">+ NT</span><div class=" font-weight-bold" id="shippingFee">NT @ViewBag.firstFee</div>
+                             <span class="mr-2 font-weight-bold">+ NT</span><div class=" font-weight-bold" id="shippingFee"> @ViewBag.firstFee</div>
                         </div>
                         <hr>
                         <div class="d-flex gr-total">
