更新pay頁面的樣式

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -94,7 +94,7 @@
                     </div>
                     <div>
                         <h4> @Model.getFinalShippmentData.deliveryMethod </h4>
-                        <span>取件門市：</span><div id="caddress"> @Model.getFinalShippmentData.storeName </div>
+                        <span>取件門市：</span><div id="caddress" style="display: inline;"> @Model.getFinalShippmentData.storeName </div><br>
                         <span>取件姓名：</span><div id="cname" style="display: inline;"> @Model.getFinalShippmentData.name</div><br> 
                         <span>取件人電話：</span><div id="cphone" style="display: inline;"> @Model.getFinalShippmentData.phone</div>
                     </div>
